[package]
name = "dunes"
version = "0.1.0"
edition = "2024"
authors = ["uselesssgoddess"]

[workspace]
members = ["crates/mem", "crates/trees", "crates/doublets"]

[workspace.dependencies]
bytemuck = { version = "1.23", default-features = false }
thiserror = { version = "2.0", default-features = false }
