[package]
name = "doublets"
version = "0.0.0"
edition = "2024"
authors = ["uselesssgoddess"]

[dependencies]
trees = { path = "../trees" }
mem = { path = "../mem" }
bytemuck = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }

[dev-dependencies]
criterion = "0.8"

[[bench]]
name = "doublets_bench"
harness = false
